2006-07-23 Ales Hvezda   <ahvezda@geda.seul.org>

	* src/x_color.c: Added a missing extern keyword on colors structure

2006-07-23  Mike Jarabek  <mjarabek@istop.com>

	* examples/drawing_primitives.sch: Removed extra line from text in
	drawing primitives.

2006-07-19 Ales Hvezda   <ahvezda@geda.seul.org>

	* po/POTFILES.in: Updated files to get rid of old noweb references.

	* po/*.po, po/gschem.pot: Updated files to take into account above
	changes (via make dist).

	* src/rcstrings.c, src/Makefile.am, po/POTFILES.in: Oops forgot
	about this file (thanks Werner); added file back and updated po
	files via make dist again.

2006-07-15 Ales Hvezda   <ahvezda@geda.seul.org>

	* include/x_log.h, src/g_hook.c, src/g_keys.c, src/g_rc.c, 
	src/gschem.c, src/i_basic.c, src/i_callbacks.c, src/o_complex.c,
	src/o_misc.c, src/o_net.c, src/o_picture.c, src/o_slot.c, 
	src/o_text.c, src/o_undo.c, src/x_attribedit.c, src/x_color.c,
	src/x_dialog.c, src/x_fileselect.c, src/x_grid.c, src/x_image.c,
	src/x_menus.c, src/x_pagesel.c, src/x_print.c, src/x_stroke.c,
	src/x_window.c: Converted all free, ?alloc, and strdup calls to
	use g_free, g_?alloc, and g_strdup.  This is the first phase in
	fixing the slice crash under glib 2.10.x.  Also fixed some -pedantic
	compiler warnings.

        * src/o_picture.c, src/x_image.c: Changed all g_free() calls
        on all pixbuf objects to be g_object_unref.  This was causing
        crashes with glib 2.10.x.

	* src/x_image.c: Oops, g_object_unref, not g_object_ref

2006-07-13 Ales Hvezda   <ahvezda@geda.seul.org>

	* Applied and commited Jason Childs' noweb removal patch and added
	the new C source files.

2006-07-08 Jason Childs <oblivian@users.sourceforge.net>

	* noweb/a_pan.nw, noweb/a_zoom.nw, noweb/g_funcs.nw, noweb/g_hook.nw,
	  noweb/g_keys.nw, noweb/g_rc.nw, noweb/g_register.nw,
	  noweb/globals.nw, noweb/gschem.nw, noweb/i_basic.nw,
	  noweb/i_callbacks.nw, noweb/i_vars.nw, noweb/o_arc.nw,