@@ -2,6 +2,9 @@
 
 	* src/x_color.c: Added a missing extern keyword on colors structure
 
+        * include/defines.h: Applied mouse pan patch by Peter Clifton.
+        (Patch #1527361): Allow middle button panning in gschem
+
 2006-07-23  Mike Jarabek  <mjarabek@istop.com>
 
 	* examples/drawing_primitives.sch: Removed extra line from text in
